[BUGFIX] BE login shows unaesthetic scrollbars
CSS adjustments for login screen in t3skin

Fixes: #43330
Releases: 6.1, 6.0

Reviewed-on: https://review.typo3.org/17282
Tested-by: Wouter Wolters
Tested-by: Torben Hansen
Tested-by: Felix Kopp
Tested-by: Mattias Nilsson
Tested-by: Georg Ringer

--- a/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
@@ -10,8 +10,9 @@
 }
 
 #typo3-index-php #t3-login-form {
-	margin: 10% auto 0 auto;
+	margin: 0 auto;
 	width: 430px;
+	padding: 10% 0 0 0;
 }
 
 #typo3-index-php .t3-headline {
